Add home layout

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/ubuntu-mono": "^5.0.8"
+    "@fontsource/ubuntu-mono": "^5.0.8",
+    "lorem-ipsum": "^2.0.8"
   }
 }
