--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "concurrently \"vite dev\" \"maildev\"",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -14,13 +14,17 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@types/nodemailer": "^6.4.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.15",
+    "concurrently": "^8.2.1",
     "daisyui": "^3.5.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "lorem-ipsum": "^2.0.8",
+    "maildev": "^2.1.0",
     "postcss": "^8.4.28",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
@@ -34,6 +38,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource/ubuntu-mono": "^5.0.8",
-    "lorem-ipsum": "^2.0.8"
+    "liquidjs": "^10.9.2",
+    "nodemailer": "^6.9.4"
   }
 }
