--- a/.env
+++ b/.env
@@ -4,3 +4,12 @@ NODE_ENV=
 MAILER_HOST=
 MAILER_USER=
 MAILER_PASSWORD=
+
+# Vercel KV
+KV_URL=
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
+KV_REST_API_READ_ONLY_TOKEN=
+
+# Odds API
+ODDS_API_KEY=
