--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "tailwindcss": "^3.3.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
+    "vercel": "^32.2.0",
     "vite": "^4.4.2"
   },
   "type": "module",
   "dependencies": {
     "@fontsource/ubuntu-mono": "^5.0.8",
-    "liquidjs": "^10.9.2",
+    "@vercel/kv": "^0.2.2",
     "nodemailer": "^6.9.4"
   }
 }
